--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
+    "react-native": "^0.71.8",
+    "react-native-vector-icons": "^9.2.0",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
