--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "foresee-revamp",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://isaacindex.github.io/react-gh-pages",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -20,6 +23,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "gh-pages": "^6.0.0",
     "vite": "^4.1.0"
   }
 }
